# anthesis

./: .gitignore  CMakeLists.txt  PLUGIN_PROMPTS.md  README.md
Alluvium/: CMakeLists.txt
Alluvium/Source/: BotanicalLookAndFeel.cpp  BotanicalLookAndFeel.h  NatureLayer.cpp  NatureLayer.h  ParticleSystem.cpp  ParticleSystem.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Aureole/: CMakeLists.txt
Aureole/Source/: BotanicalLookAndFeel.cpp  BotanicalLookAndFeel.h  NatureLayer.cpp  NatureLayer.h  ParticleSystem.cpp  ParticleSystem.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Corolla/: CMakeLists.txt
Corolla/Source/: BotanicalLookAndFeel.cpp  BotanicalLookAndFeel.h  NatureLayer.cpp  NatureLayer.h  ParticleSystem.cpp  ParticleSystem.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Ferrite/: CMakeLists.txt
Ferrite/Source/: BotanicalLookAndFeel.h  ParticleSystem.cpp  ParticleSystem.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Mycelium/: CMakeLists.txt
Mycelium/Source/: BotanicalLookAndFeel.cpp  BotanicalLookAndFeel.h  NatureLayer.cpp  NatureLayer.h  ParticleSystem.cpp  ParticleSystem.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Pollen/: CMakeLists.txt
Pollen/Source/: BotanicalLookAndFeel.cpp  BotanicalLookAndFeel.h  NatureLayer.cpp  NatureLayer.h  ParticleSystem.cpp  ParticleSystem.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Resin/: CMakeLists.txt
Resin/Source/: BotanicalLookAndFeel.cpp  NatureLayer.cpp  NatureLayer.h  ParticleSystem.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Understory/: CMakeLists.txt
Understory/Source/: BotanicalLookAndFeel.cpp  BotanicalLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
shared/: CMakeLists.txt
shared/UI/: AnthesisColors.h
